# prop65-sds-checker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: decisions.md
prop65_sds_checker/: checker.py  main.py  pdf_extractor.py  prop65_list.py  reporter.py
src/: checker.py  main.py  prop65_list.py  reporter.py
